[gd_scene load_steps=3 format=3 uid="uid://vwpxcrgsmbqn"]

[ext_resource type="PackedScene" uid="uid://base_scene_template" path="res://level1/scene_template.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://crf22qthb73tu" path="res://level1/secret_passage_entrance.gd" id="2_script"]

[node name="SecretPassageEntrance" instance=ExtResource("1_base")]
script = ExtResource("2_script")

[node name="TitlePanel" type="Panel" parent="HBoxContainer/LeftVBox" index="0"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Title" type="Label" parent="HBoxContainer/LeftVBox/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Secret Passage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BreakTimerPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="1"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BreakTimerBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="BreakTimer" type="Label" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Break Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PuzzleButton" type="Button" parent="HBoxContainer/RightVBox" index="0"]
layout_mode = 2
text = "Approach Hidden Door"

[node name="ToBarButton" type="Button" parent="HBoxContainer/RightVBox" index="1"]
layout_mode = 2
text = "To Bar"

[connection signal="pressed" from="HBoxContainer/RightVBox/PuzzleButton" to="." method="_on_puzzle_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/ToBarButton" to="." method="_on_to_bar_button_pressed"]
